--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "swiper": "^9.3.2",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
-    "tw-merge": "^0.0.1-alpha.3",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   },
