--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^13.4.8",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
-    "next": "13.4.2",
+    "next": "^13.4.8",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "swiper": "^9.3.2",
@@ -36,16 +38,5 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.14",
-    "@storybook/addon-interactions": "^7.0.14",
-    "@storybook/addon-links": "^7.0.14",
-    "@storybook/blocks": "^7.0.14",
-    "@storybook/nextjs": "^7.0.14",
-    "@storybook/react": "^7.0.14",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "eslint-plugin-storybook": "^0.6.12",
-    "storybook": "^7.0.14"
   }
 }
