--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
+    "react-textarea-autosize": "^8.5.2",
     "swiper": "^9.3.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
