--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
@@ -26,6 +27,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "^13.4.8",
@@ -44,6 +46,7 @@
     "swiper": "^9.3.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
   }
