updated : .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Database URI
 MONGODB_URI=
 
-# Secrets
-ACCESS_TOKEN_SECRET=
+# next auth uses this env variable by default
+# so we dont need to pass anything to config
+NEXTAUTH_SECRET=
+
+IMAGE_SERVICE=
