--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@nivo/bar": "^0.83.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -31,6 +32,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "^13.4.8",
+    "leaflet": "^1.9.4",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
     "next": "^13.4.8",
@@ -41,6 +43,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-textarea-autosize": "^8.5.2",
     "swiper": "^9.3.2",
@@ -49,5 +52,8 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3"
   }
 }
