--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
-    "@nivo/bar": "^0.83.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -52,8 +51,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.0.4",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.8"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3"
